--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,15 @@
 <resources>
-    <string name="app_name">githubusersearch</string>
+    <string name="app_name">Github User</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="search_for_your_favourite_repos">Search for your favourite user</string>
+    <string name="no_repos_found_try_something_else">User not found, try something else</string>
+    <string name="results_could_not_be_loaded">Results could not be loaded</string>
+    <string name="retry">Retry</string>
+    <string name="user">UserName</string>
+    <string name="no_bio">Something About Me</string>
+    <string name="follower">Followers\n</string>
+    <string name="follower_placeholder">0</string>
+    <string name="following">Following</string>
+    <string name="github_search">Search</string>
 </resources>
